@@ -10,6 +10,9 @@ var truncate = require('unicode-byte-truncate')
 
 var version = require('../package').version
 var packageName = require('../package').name
+
+const { WildcardMatcher } = require('./wildcard-matcher')
+
 // Standardize user-agent header. Only use "elasticapm-node" if it matches "elastic-apm-node".
 if (packageName === 'elastic-apm-node') {
   packageName = 'elasticapm-node'
@@ -70,6 +73,7 @@ var DEFAULTS = {
   sourceLinesSpanAppFrames: 0,
   sourceLinesSpanLibraryFrames: 0,
   stackTraceLimit: 50,
+  transactionIgnoreUrls: [],
   transactionMaxSpans: 500,
   transactionSampleRate: 1.0,
   useElasticTraceparentHeader: true,
@@ -124,6 +128,7 @@ var ENV_TABLE = {
   sourceLinesSpanAppFrames: 'ELASTIC_APM_SOURCE_LINES_SPAN_APP_FRAMES',
   sourceLinesSpanLibraryFrames: 'ELASTIC_APM_SOURCE_LINES_SPAN_LIBRARY_FRAMES',
   stackTraceLimit: 'ELASTIC_APM_STACK_TRACE_LIMIT',
+  transactionIgnoreUrls: 'ELASTIC_TRANSACTION_IGNORE_URLS',
   transactionMaxSpans: 'ELASTIC_APM_TRANSACTION_MAX_SPANS',
   transactionSampleRate: 'ELASTIC_APM_TRANSACTION_SAMPLE_RATE',
   useElasticTraceparentHeader: 'ELASTIC_APM_USE_ELASTIC_TRACEPARENT_HEADER',
@@ -134,7 +139,8 @@ var ENV_TABLE = {
 var CENTRAL_CONFIG = {
   transaction_sample_rate: 'transactionSampleRate',
   transaction_max_spans: 'transactionMaxSpans',
-  capture_body: 'captureBody'
+  capture_body: 'captureBody',
+  transaction_ignore_urls: 'transactionIgnoreUrls'
 }
 
 var VALIDATORS = {
@@ -186,7 +192,8 @@ var MINUS_ONE_EQUAL_INFINITY = [
 ]
 
 var ARRAY_OPTS = [
-  'disableInstrumentations'
+  'disableInstrumentations',
+  'transactionIgnoreUrls'
 ]
 
 var KEY_VALUE_OPTS = [
@@ -204,7 +211,7 @@ class Config {
     this.ignoreUrlRegExp = []
     this.ignoreUserAgentStr = []
     this.ignoreUserAgentRegExp = []
-
+    this.transactionIgnoreUrlRegExp = []
     // If we didn't find a config file on process boot, but a path to one is
     // provided as a config option, let's instead try to load that
     if (confFile === null && opts && opts.configFile) {
@@ -369,17 +376,31 @@ function readEnv () {
 }
 
 function normalize (opts) {
-  normalizeIgnoreOptions(opts)
   normalizeKeyValuePairs(opts)
   normalizeNumbers(opts)
   normalizeBytes(opts)
   normalizeArrays(opts)
   normalizeTime(opts)
   normalizeBools(opts)
+  normalizeIgnoreOptions(opts)
   truncateOptions(opts)
 }
 
 function normalizeIgnoreOptions (opts) {
+  if (opts.transactionIgnoreUrls) {
+    // We can't guarantee that opts will be a Config so set a
+    // default value. This is to work around CENTRAL_CONFIG tests
+    // that call this method with a plain object `{}`
+    if (!opts.transactionIgnoreUrlRegExp) {
+      opts.transactionIgnoreUrlRegExp = []
+    }
+    const wildcard = new WildcardMatcher()
+    for (const ptn of opts.transactionIgnoreUrls) {
+      const re = wildcard.compile(ptn)
+      opts.transactionIgnoreUrlRegExp.push(re)
+    }
+  }
+
   if (opts.ignoreUrls) {
     for (const ptn of opts.ignoreUrls) {
       if (typeof ptn === 'string') opts.ignoreUrlStr.push(ptn)
