@@ -12,6 +12,10 @@ endif::[]
 
 [float]
 ===== Features
+* feat: transactionIgnoreUrl wildcard matching {pull}1870[#1870]
+  Allows users to ignore URLs using simple wildcard matching patterns that behave
+  the same across language agents. See https://github.com/elastic/apm/issues/144
+
 * Cool new feature: {pull}2526[#2526]
 
 [float]
